--- a/config_host.mk.in
+++ b/config_host.mk.in
@@ -19,7 +19,9 @@ export ANDROID_NDK_DIR=@ANDROID_NDK_DIR@
 export ANDROID_API_LEVEL=@ANDROID_API_LEVEL@
 export ANDROID_APP_ABI=@ANDROID_APP_ABI@
 export ANDROID_SDK_DIR=@ANDROID_SDK_DIR@
+export ANDROID_SYSROOT_PLATFORM=@ANDROID_SYSROOT_PLATFORM@
 export ANDROID_PACKAGE_NAME=@ANDROID_PACKAGE_NAME@
+export ANDROID_TOOLCHAIN=@ANDROID_TOOLCHAIN@
 export ANDROID_GCC_TOOLCHAIN_VERSION=@ANDROID_GCC_TOOLCHAIN_VERSION@
 export ANT=@ANT@
 export ANT_HOME=@ANT_HOME@
