improve comment about SKIA_DEBUG
Change-Id: I1101b0cc51a8c1f4302f479c3dcd3db002c1be88
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146164
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>

--- a/config_host/config_skia.h.in
+++ b/config_host/config_skia.h.in
@@ -62,8 +62,9 @@ are the same.
 // the default X11 visual is actually also BGRA.
 #define SK_R32_SHIFT 16
 
-// Enable Skia's internal checks depending on DBG_UTIL mode. ENABLE_SKIA_DEBUG
-// controls whether to build with or without optimizations (set in Makefile).
+// Enable Skia's internal checks depending on DBG_UTIL mode.
+// ENABLE_SKIA_DEBUG controls whether to build with or without optimizations, and
+// is set by using --enable-skia=debug.
 #ifdef DBG_UTIL
 
 #define SK_DEBUG
