qt6 configure: Search for Qt 6 moc in more locations
This e.g. makes this find the correct moc on Arch Linux,
where the Qt 6 moc is provided under `/usr/lib/qt6/moc`
by package `qt6-base`.

Change-Id: Iefca23e6391a952eb79108260ae1417fc75ad0ef
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146781
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>

--- a/configure.ac
+++ b/configure.ac
@@ -13116,7 +13116,7 @@ then
             qt6_libexec_dirs="$qt6_libexec_dirs:$lib_dir/libexec"
         fi
     done
-    AC_PATH_PROGS( MOC6, [moc-qt6 moc], no, [`dirname $qt6_libdir`/libexec:$QT6DIR/libexec:$qt6_libexec_dirs:$PATH])
+    AC_PATH_PROGS( MOC6, [moc-qt6 moc], no, [`dirname $qt6_libdir`/libexec:$QT6DIR/libexec:$qt6_libexec_dirs:`echo $qt6_libdirs | $SED -e 's/ /:/g'`:$PATH])
     if test "$MOC6" = "no"; then
         AC_MSG_ERROR([Qt Meta Object Compiler not found.  Please specify
 the root of your Qt installation by exporting QT6DIR before running "configure".])
