with-system-libs doesn't seem to mean that anymore for harfbuzz
since:

commit 787bdea0f73c3468c0edb4f33f9cd98a752a6484
Date:   Tue Sep 20 16:07:14 2022 +0300

    Enable opening of downloaded fonts only in ForKit in Online

which silently disabled that from working for harfbuzz and graphite,
but just for Linux.

Change-Id: I13a67e3ad53a8d4c1833df19dd9f96b0b7366774
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147316
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>

--- a/distro-configs/LibreOfficeCoverity.conf
+++ b/distro-configs/LibreOfficeCoverity.conf
@@ -9,6 +9,8 @@
 --enable-gstreamer-1-0
 --enable-option-checking=fatal
 --with-system-libs
+--with-system-graphite
+--with-system-harfbuzz
 --with-system-headers
 --without-system-cppunit
 --without-system-libfixmath
