Note that Clang consteval bugs are meanwhile fixed
Change-Id: I90b2765bdad5fe753288420b01a5395bcf22f44f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147885
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -14344,13 +14344,13 @@ dnl from consteval constructor initializing const variable",
 dnl <https://gcc.gnu.org/bugzilla/show_bug.cgi?id=98752> "wrong 'error: ‘this’ is not a constant
 dnl expression' with consteval constructor", <https://bugs.llvm.org/show_bug.cgi?id=50063> "code
 dnl using consteval: 'clang/lib/CodeGen/Address.h:38: llvm::Value*
-dnl clang::CodeGen::Address::getPointer() const: Assertion `isValid()' failed.'",
-dnl <https://developercommunity.visualstudio.com/t/1581879> "Bogus error C7595 with consteval
-dnl constructor in ternary expression (/std:c++latest)", or
+dnl clang::CodeGen::Address::getPointer() const: Assertion `isValid()' failed.'" (which should be
+dnl fixed since Clang 14), <https://developercommunity.visualstudio.com/t/1581879> "Bogus error
+dnl C7595 with consteval constructor in ternary expression (/std:c++latest)", or
 dnl <https://github.com/llvm/llvm-project/issues/54612> "C++20, consteval, anonymous union:
 dnl llvm/lib/IR/Instructions.cpp:1491: void llvm::StoreInst::AssertOK(): Assertion
 dnl `cast<PointerType>(getOperand(1)->getType())->isOpaqueOrPointeeTypeMatches(getOperand(0)->getType())
-dnl && "Ptr must be a pointer to Val type!"' failed.":
+dnl && "Ptr must be a pointer to Val type!"' failed." (which should be fixed since Clang 17):
 AC_LANG_PUSH([C++])
 save_CXX=$CXX
 if test "$COM" = MSC && test "$COM_IS_CLANG" != TRUE; then
