add ipv6 enabled maven repository
maven central so far doesn't support ipv6 on the primary URL (see
https://issues.sonatype.org/browse/MVNCENTRAL-658 ), it is only enabled
on a dedicated ipv6.repo1.maven.org URL currently.
Add that one to the list of repositories so that ipv6-only hosts can also
fetch the dependencies.
(when using internal ipv4 as well, you'll also need to export
JAVA_OPTS="-Djava.net.preferIPv6Addresses=true"
since otherwise the gradle wrapper fails to download gradle)

Change-Id: I22f0e07fd4e6bb518396f76db20c174e45588372
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147917
Tested-by: Jenkins
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>

--- a/android/source/build.gradle
+++ b/android/source/build.gradle
@@ -5,6 +5,9 @@ apply from: 'liboSettings.gradle'
 allprojects {
     repositories {
         mavenCentral()
+        maven {
+            url "https://ipv6.repo1.maven.org/maven2"
+        }
         google()
     }
 }
@@ -12,6 +15,9 @@ allprojects {
 buildscript {
     repositories {
         mavenCentral()
+        maven {
+            url "https://ipv6.repo1.maven.org/maven2"
+        }
         google()
     }
     dependencies {
