Re-enable Skia in Flatpak builds
...as requested at
<https://github.com/flathub/org.libreoffice.LibreOffice/issues/213> "Can Skia be
reenabled in the Flatpak build?" and implemented on Flathub for now with
<https://github.com/flathub/org.libreoffice.LibreOffice/commit/372d036e9113b6080780669ad44fc11a172356ed>
"Re-enable Skia".  (This partially reverts
2a266caa3609fa120d9aeea8cf58c7cc0118f3db "Flatpak: Upgrade to 21.08 runtime,
disable Skia".)

Change-Id: I50039d431fd3e6ba4c0d859d71e42e744433806b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148054
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>

--- a/solenv/flatpak-manifest.in
+++ b/solenv/flatpak-manifest.in
@@ -607,6 +607,13 @@
                     "dest-filename": "@LIBATOMIC_OPS_TARBALL@"
                 },
                 {
+                    "url": "https://dev-www.libreoffice.org/src/@SKIA_TARBALL@",
+                    "sha256": "@SKIA_SHA256SUM@",
+                    "type": "file",
+                    "dest": "external/tarballs",
+                    "dest-filename": "@SKIA_TARBALL@"
+                },
+                {
                     "url": "https://dev-www.libreoffice.org/src/@DRAGONBOX_TARBALL@",
                     "sha256": "@DRAGONBOX_SHA256SUM@",
                     "type": "file",
