Fix typo in code
Change-Id: I9386ce811885e46ffedfc5bd8cc05007ddf75f10
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149968
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -14593,7 +14593,7 @@ else
                 AC_MSG_ERROR([jq not found])
             fi
             if test -z "$SYSTEMD_ESCAPE"; then
-                AC_MSG_ERROR([syystemd-escape not found])
+                AC_MSG_ERROR([systemd-escape not found])
             fi
             if test -z "$SYSTEMD_RUN"; then
                 AC_MSG_ERROR([systemd-run not found])
